public class Player extends Human {
	public Player(String name) {
		super(name);
	}
}
